# vidgrep

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
frontend-ts/: Dockerfile  package.json
frontend-ts/app/: globals.css  layout.tsx  page.tsx
frontend-ts/lib/: types.ts
gateway-go/: Dockerfile  go.mod  main.go
gateway-go/internal/config/: config.go
gateway-go/internal/pipeline/: pipeline.go  pipeline_test.go
ml-pipeline-python/: Dockerfile  pyproject.toml
ml-pipeline-python/tests/: test_ml.py
ml-pipeline-python/vidgrep_ml/: __init__.py  cli.py  concepts.py  demo.py  embedder.py  models.py  server.py  service.py  vector_store.py
processor-rust/: Cargo.toml  Dockerfile
processor-rust/src/: decode.rs  frame.rs  lib.rs  main.rs  synthetic.rs
proto/: protocol.md
scripts/: verify.py
