[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidgrep-ml"
version = "0.1.0"
description = "vidgrep ML pipeline: CLIP-style multimodal embedding + vector search over video frames"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # core embedder + vector store are dependency-free and run offline

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
clip = ["torch>=2.2", "transformers>=4.40", "pillow>=10.0"]
qdrant = ["qdrant-client>=1.9"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
vidgrep-ml = "vidgrep_ml.cli:main"

[tool.setuptools.packages.find]
include = ["vidgrep_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
