[package]
name = "vidgrep-processor"
version = "0.1.0"
edition = "2021"
description = "vidgrep frame processor: decode/sample -> resize 224x224 -> normalize -> POST to the ML service"
license = "MIT"

[lib]
name = "vidgrep_processor"
path = "src/lib.rs"

[[bin]]
name = "vidgrep-processor"
path = "src/main.rs"

[features]
default = []
# Real video decoding via FFmpeg. Off by default so the crate builds with no
# system libraries; the synthetic frame source exercises the same pipeline.
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
ffmpeg-next = { version = "7", optional = true }

[profile.release]
opt-level = 3
lto = true
